--- a/style.css
+++ b/style.css
@@ -94,7 +94,8 @@ body{
 }
 
 /* SMARTPHONE LANDSCAPE*/
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 873px)
+{
   .wrapper{
     width: 60vw;
   }
@@ -103,6 +104,15 @@ body{
   }
   .wrapper .btn{
     height: 6vw;
+  }
+}
+@media screen and (min-device-width: 873px) and (max-device-width: 992px) 
+{
+  .wrapper .input-box{
+    position: relative;
+    width: 100%;
+    height: 10vh;
+    margin: 30px 0;
   }
 }
 
@@ -116,6 +126,7 @@ body{
   }
   .wrapper .btn{
     font-size: 24px;
+    height: 6vw;
   }
 }
 
